--- a/style.css
+++ b/style.css
@@ -1439,9 +1439,6 @@ table {
       position: absolute; } }
 
 @media only screen and (min-width: 1000px) {
-    .site-header .site-header__row--secondary {
-      padding-top: var(--theme-spacing-default);
-      padding-bottom: var(--theme-spacing-tiny); }
     .site-header .site-header__row--logo {
       padding-top: var(--theme-spacing-xsmall);
       padding-bottom: var(--theme-spacing-small); }
